--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Testing git folder
+TestRepo/
+Test/
+
 # User-specific files
 *.rsuser
 *.suo
