Configuracion y Pre-temas

--- a/Editor/Editor.csproj
+++ b/Editor/Editor.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="AvalonEdit" Version="6.3.0.90" />
+    <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
