--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -9,11 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
     <PackageReference Include="Azure.Identity" Version="1.11.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-    <PackageReference Include="WPF-UI" Version="3.0.4" />
     <PackageReference Include="YamlDotNet" Version="15.1.2" />
   </ItemGroup>
 
