--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="YamlDotNet" Version="15.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="office">
+      <HintPath>..\..\..\..\..\..\..\..\Windows\assembly\GAC_MSIL\office\15.0.0.0__71e9bce111e9429c\office.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
