--- a/Main/settings.yaml
+++ b/Main/settings.yaml
@@ -1,3 +1,22 @@
-﻿etiquetas-dir: ""
-sql-connection: ""
-recall-template: ""
+﻿# Visual Ternera config file
+
+# - Dirección de etiquetas
+EtiquetasDir: ""
+
+# - Cadena de conexión con la base de datos SQL Server
+SqlConnection: ""
+
+# - Dirección al archivo template de RE-CAL-22
+RecallTemplate: ""
+
+# - Tema del editor, posibles modos: dark, light
+Theme: Dark
+
+# - Region a usar por el programa, para darle formato a las fechas y numeros
+Culture: "es-MX"
+
+# - Repositorio donde se almacenan globalmente las eitquetas
+GitRepo: "https://github.com/runfo-sa/Etiquetas"
+
+# - Extensión de los archivos de etiqueta, sirve para filtrar
+EtiquetasExtension: "e01"
