--- a/Editor/Editor.csproj
+++ b/Editor/Editor.csproj
@@ -8,20 +8,41 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Resources\new.png" />
-    <None Remove="Resources\open.png" />
-    <None Remove="Resources\preview.png" />
-    <None Remove="Resources\print.png" />
-    <None Remove="Resources\rotate-left.png" />
-    <None Remove="Resources\rotate-right.png" />
-    <None Remove="Resources\save-all.png" />
-    <None Remove="Resources\save.png" />
-    <None Remove="Resources\zoom-in.png" />
-    <None Remove="Resources\zoom-out.png" />
+    <None Remove="Resources\dark-new.png" />
+    <None Remove="Resources\dark-open.png" />
+    <None Remove="Resources\dark-preview.png" />
+    <None Remove="Resources\dark-print.png" />
+    <None Remove="Resources\dark-rotate-left.png" />
+    <None Remove="Resources\dark-rotate-right.png" />
+    <None Remove="Resources\dark-save-all.png" />
+    <None Remove="Resources\dark-save.png" />
+    <None Remove="Resources\light-new.png" />
+    <None Remove="Resources\light-open.png" />
+    <None Remove="Resources\light-preview.png" />
+    <None Remove="Resources\light-print.png" />
+    <None Remove="Resources\light-rotate-left.png" />
+    <None Remove="Resources\light-rotate-right.png" />
+    <None Remove="Resources\light-save-all.png" />
+    <None Remove="Resources\light-save.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Resources\rotate-left.png" />
+    <Resource Include="Resources\dark-new.png" />
+    <Resource Include="Resources\dark-open.png" />
+    <Resource Include="Resources\dark-preview.png" />
+    <Resource Include="Resources\dark-print.png" />
+    <Resource Include="Resources\dark-rotate-left.png" />
+    <Resource Include="Resources\dark-rotate-right.png" />
+    <Resource Include="Resources\dark-save-all.png" />
+    <Resource Include="Resources\dark-save.png" />
+    <Resource Include="Resources\light-new.png" />
+    <Resource Include="Resources\light-open.png" />
+    <Resource Include="Resources\light-preview.png" />
+    <Resource Include="Resources\light-print.png" />
+    <Resource Include="Resources\light-rotate-left.png" />
+    <Resource Include="Resources\light-rotate-right.png" />
+    <Resource Include="Resources\light-save-all.png" />
+    <Resource Include="Resources\light-save.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,18 +54,6 @@
     <PackageReference Include="AvalonEdit" Version="6.3.0.90" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.77" />
     <PackageReference Include="YamlDotNet" Version="15.1.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Resource Include="Resources\new.png" />
-    <Resource Include="Resources\open.png" />
-    <Resource Include="Resources\preview.png" />
-    <Resource Include="Resources\print.png" />
-    <Resource Include="Resources\rotate-right.png" />
-    <Resource Include="Resources\save-all.png" />
-    <Resource Include="Resources\save.png" />
-    <Resource Include="Resources\zoom-in.png" />
-    <Resource Include="Resources\zoom-out.png" />
   </ItemGroup>
 
 </Project>
