--- a/Comparator/Comparator.csproj
+++ b/Comparator/Comparator.csproj
@@ -14,6 +14,8 @@
   <ItemGroup>
     <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
     <PackageReference Include="AvalonEdit" Version="6.3.0.90" />
+    <PackageReference Include="DiffPlex" Version="1.7.2" />
+    <PackageReference Include="DiffPlex.Wpf" Version="1.4.0" />
   </ItemGroup>
 
 </Project>
