--- a/Main/settings.yaml
+++ b/Main/settings.yaml
@@ -20,3 +20,13 @@ GitRepo: "https://github.com/runfo-sa/Etiquetas"
 
 # - Extensión de los archivos de etiqueta, sirve para filtrar
 EtiquetasExtension: "e01"
+
+# - Lista de directorios virtuales, por los cuales se deberian filtrar la carpeta de etiquetas
+VirtualDirectories:
+  - Name: "Caja"
+    Filter: "CAJA"
+  - Name: "Primaria"
+    Filter: "PRIMARIA"
+
+# - Modulo utilizado para generar la preview de etiquetas
+PreviewEngine: Labelary
