--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -9,7 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
+    <PackageReference Include="Prism.Wpf" Version="8.1.97" />
     <PackageReference Include="YamlDotNet" Version="15.1.6" />
   </ItemGroup>
 
