--- a/Editor/Editor.csproj
+++ b/Editor/Editor.csproj
@@ -53,6 +53,7 @@
     <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
     <PackageReference Include="AvalonEdit" Version="6.3.0.90" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.122" />
+    <PackageReference Include="Prism.Wpf" Version="8.1.97" />
     <PackageReference Include="YamlDotNet" Version="15.1.6" />
   </ItemGroup>
 
