--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Prism.DryIoc" Version="9.0.401-pre" />
     <PackageReference Include="YamlDotNet" Version="15.1.6" />
   </ItemGroup>
 
