--- a/Cohere/Cohere.csproj
+++ b/Cohere/Cohere.csproj
@@ -17,9 +17,10 @@
 
   <ItemGroup>
     <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
+    <PackageReference Include="Material.Icons.WPF" Version="2.1.9" />
     <PackageReference Include="Microsoft.Office.Interop.Word" Version="15.0.4797.1004" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.122" />
-    <PackageReference Include="Prism.Wpf" Version="8.1.97" />
+    <PackageReference Include="Prism.Wpf" Version="9.0.401-pre" />
   </ItemGroup>
 
   <ItemGroup>
