--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -10,9 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
+    <PackageReference Include="Material.Icons.WPF" Version="2.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
-    <PackageReference Include="Prism.Wpf" Version="8.1.97" />
-    <PackageReference Include="YamlDotNet" Version="15.1.6" />
+    <PackageReference Include="Prism.Wpf" Version="9.0.401-pre" />
+    <PackageReference Include="YamlDotNet" Version="15.3.0" />
   </ItemGroup>
 
   <ItemGroup>
